<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/teamA"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_a_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:text="@string/zero"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="increment"
                    android:text="@string/goal" />


            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/teamB"
                    android:textColor="#616161"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/team_b_score"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="24dp"
                    android:text="@string/zero"
                    android:textColor="#000000"
                    android:textSize="56sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="incrementB"
                    android:text="@string/goal" />
            </LinearLayout>

        </LinearLayout>


        <!--<RelativeLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="horizontal">-->

            <!--<ImageView-->
                <!--android:layout_width="48sp"-->
                <!--android:layout_height="48sp"-->
                <!--android:contentDescription="@string/puck"-->
                <!--android:src="@drawable/hockey2"-->
                <!--android:layout_alignStart="@id/penalty"/>-->
            <!--<TextView-->
                <!--android:id="@+id/penalty"-->
                <!--android:layout_centerInParent="true"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:fontFamily="sans-serif-medium"-->
                <!--android:gravity="center"-->
                <!--android:padding="20dp"-->
                <!--android:text="@string/penalty"-->
                <!--android:textColor="#616161"-->
                <!--android:textSize="14sp" />-->
            <!--<ImageView-->
                <!--android:layout_alignParentRight="true"-->
                <!--android:layout_width="48sp"-->
                <!--android:layout_height="48sp"-->
                <!--android:contentDescription="@string/puck"-->
                <!--android:src="@drawable/hockey2" />-->
        <!--</RelativeLayout>-->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48sp"
                android:contentDescription="@string/puck"
                android:src="@drawable/hockey2" />
            <TextView
                android:id="@+id/penalty"
                android:layout_weight="0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-medium"
                android:gravity="center"
                android:padding="20dp"
                android:text="@string/penalty"
                android:textColor="#616161"
                android:textSize="14sp" />
            <ImageView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48sp"
                android:contentDescription="@string/puck"
                android:src="@drawable/hockey2" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_a_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:text="@string/zero"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="pen2"
                    android:text="@string/minpen" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="pen5"
                    android:text="@string/majpen" />
            </LinearLayout>

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/team_b_fouls"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:text="@string/zero"
                    android:textColor="#000000"
                    android:textSize="24sp" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="pen2B"
                    android:text="@string/minpen" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:onClick="pen5B"
                    android:text="@string/majpen" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:contentDescription="@string/puck"
            android:src="@drawable/puck2" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:onClick="reset"
            android:paddingLeft="24dp"
            android:paddingRight="24dp"
            android:text="@string/reset" />

        <ImageView
            android:layout_width="48sp"
            android:layout_height="48sp"
            android:contentDescription="@string/puck"
            android:src="@drawable/puck2" />

    </LinearLayout>


</RelativeLayout>